--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:name="com.kappisan.games.justynaadventures.GameSplash"
             android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="com.soidutsrepsak.games.justynaadventures.GAMESPLASH" />
+                <action android:name="com.kappisan.games.justynaadventures.GAMESPLASH" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -34,7 +34,7 @@
             android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="com.soidutsrepsak.games.justynaadventures.MAINMENU" />
+                <action android:name="com.kappisan.games.justynaadventures.MAINMENU" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -43,7 +43,7 @@
             android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="com.soidutsrepsak.games.justynaadventures.GAMEOPTIONS" />
+                <action android:name="com.kappisan.games.justynaadventures.GAMEOPTIONS" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -52,7 +52,7 @@
             android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="com.soidutsrepsak.games.justynaadventures.ABOUT" />
+                <action android:name="com.kappisan.games.justynaadventures.ABOUT" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -61,7 +61,7 @@
             android:name="com.kappisan.games.justynaadventures.MainGameScreen"
             android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="com.soidutsrepsak.games.justynaadventures.MAINGAMESCREEN" />
+                <action android:name="com.kappisan.games.justynaadventures.MAINGAMESCREEN" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -71,7 +71,7 @@
             android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="com.soidutsrepsak.games.justynaadventures.CHOOSELEVELSCREEN" />
+                <action android:name="com.kappisan.games.justynaadventures.CHOOSELEVELSCREEN" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
